<resources>
    <string name="app_name">CWC Horoscope</string>
    <string name="main_intro">Enter your birth month and day to find your Chris Chan Horoscope</string>
    <string name="sonichu_intro">You are a Sonichu!</string>
    <string name="sonichu_strength">Strengths: Always ready to seek adventure, willing to do what\’s right, always zapping to the extreme</string>
    <string name="sonichu_weakness">Weaknesses: On a constant search for Chaos emeralds, Abandonment issues</string>
    <string name="sonichu_body">Since you’re a Sonichu, you have problems fitting in with society since you were abandoned by your parents because who wants to be related to a freak like you. In order to overcome your fears a constant need to find enchanted gems fulfills a emptiness in your life because you\’re a basic meta gamer.</string>
    <string name="rosechu_intro">You are a Rosechu!</string>
    <string name="rosechu_strength">Strengths: Heavy romantic interest in Sonichus</string>
    <string name="rosechu_weakness">Weaknesses: Unhealthy obsession of Sonichus, very defensive about their gender</string>
    <string name="rosechu_body">Rosechu will dedicate their lives to praise, please and infatuate any Sonichu they encounter. If someone questions their gender, they will often become very defensive. They\’ve been known to spend entire days stating they do not have the genitalia of the opposite sex. In your darkest moments you may feel as though you\'re being used to serve the needs of someone else, while not having your own personality or life. But then you quickly get over it because you have no other purpose in this world.</string>
    <string name="blachu_intro">You are a Blachu!</string>
    <string name="blachu_strength">Strengths: An intense need to be evil.</string>
    <string name="blachu_weakness">Weaknesses: Kidnapping Rosechus</string>
    <string name="blachu_body">Blachus will try to kidnap Rosechus to show their dominance to any nearby Sonichus. Although being the basic meta gamers they are, their severe insecurities hold them back from going all the way. When they’re not scheming their next shanghai, they will sometimes question why they’re evil. Some may want to have a simple life, settle down with a significant other and open that florist shop downtown that they’ve always dreamed of. However, these thoughts are for fools for once they choose the gamer life, there’s no going back.</string>
    <string name="magichan_intro">You are a Magichan!</string>
    <string name="magichan_strength">Strengths: Teleportation powers</string>
    <string name="magichan_weakness">Weaknesses: Questioning of one\’s sexuality</string>
    <string name="magichan_body">Magichans wield a great power of teleportation that can be used to transport any matter to any location, along as they know the exact spot it will be sent to. Some may be confused about their sexuality. This doesn’t help when these beings are unknowingly married to Christine Chan by birth.</string>
    <string name="asperchu_intro">You are a Asperchu!</string>
    <string name="asperchu_strength">Strengths: Kind hearted, Nice</string>
    <string name="asperchu_weakness">Weaknesses: Easily taken advantage of by others</string>
    <string name="asperchu_body">Asperchus see the world in a glass half full perspective with thoughts of kindness shared to those around them. One of their common downfalls is being taken advantage of by jerkops who are out to get basic casuals like yourself. Sonichus tend to not like them as they feel as though Asperchus are mocking Asperger Syndrome.</string>
    <string name="jerkop_intro">You are a Jerkop!</string>
    <string name="jerkop_strength">Strengths: Reasonable thinking, protectors of law and order</string>
    <string name="jerkop_weakness">Weaknesses: Unreasonable hatred of Sonichu</string>
    <string name="jerkop_body">When it comes to protecting those around you, knowing what’s right and wrong comes naturally. However, when they see a Sonichu all sense of understanding and explanations are thrown out the window as you have an unholy obsession of disagreeing with those types of people.</string>
    <string name="naitsirhc_intro">You are a Naitsirhc!</string>
    <string name="naitsirhc_strength">Strengths: Easy going person, very trusting</string>
    <string name="naitsirhc_weakness">Weaknesses: Anxious</string>
    <string name="naitsirhc_sbody">Seen as a villain by Sonichus, A Naitsirhc will often dress themselves in thought provoking attire. They’re often viewed as people from a rough side of town. Although, when someone gets to know you they will see your courteous and kind-hearted nature.</string>
    <string name="wes_intro">You are a Wes Iseli!</string>
    <string name="wes_strength">Strengths: Confident, Knows how to talk to women</string>
    <string name="wes_weakness">Weaknesses: Ridiculous desire to cock block a Sonichu</string>
    <string name="wes_body">Being the confident person they are, they will often have no problem talking to women in any circumstances. This mental train of thought changes when they see a Sonichu trying to gain the affection of a Roeschu. An average Wes Iseli, for whatever reason, will stop what they’re doing and prevent a Sonichu from achieving eternal happiness.</string>
    <string name="graduon_intro">You are a Count Graduon!</string>
    <string name="graduon_strength">Strengths: Cherishing old memories</string>
    <string name="graduon_weakness">Weaknesses: Refusal to accept change</string>
    <string name="graduon_body">Being someone who lives in the moment, Count Graduon will cling on to dear memories as a means to escape the harsh reality of life as nothing good lasts forever. When change arrives in the life of a Count Graduon, they will spiral in self-dread, wanting to go back in time to avoid having to grow up.</string>
    <string name="wild_intro">You are a Wild Sonichu!</string>
    <string name="wild_strength">Strengths: Energetic, Fun to be around</string>
    <string name="wild_weakness">Weaknesses: Encouraging your children to commit murder</string>
    <string name="wild_body">Most of the time you’re likely bringing cheer to your friends and family. Once in a blue moon and when your blood thirst rage for kill is energized, you will often advocate your children to take another person’s life.</string>
    <string name="slaweel_intro">You are a Slaweel Ryam!</string>
    <string name="slaweel_strength">Strengths: Powerful, All knowing</string>
    <string name="slaweel_weakness">Weaknesses: Hatred of a Sonichu being happy</string>
    <string name="slaweel_body">Being the divine ruler of PVCC, you will often sit on your throne delegating the day to day business. However, when signs of a Sonichu trying to pursue happiness appears in your kingdom, you will be obsessed with trying to tear down that Sonichu’s attempt to find love.</string>
    <string name="liquid_intro">You are a Liquid Chris!</string>
    <string name="liquid_strength">Strengths: Great impersonator, Confident</string>
    <string name="liquid_weakness">Weaknesses: Prone to being Autistic</string>
    <string name="liquid_body">These types tend to be great impersonators among social groups, tending to show their confidence to potential mates by voicing several animals of a certain continent. The only downside to being a Liquid Chris is that you are more likely to be Autistic, causing you to lose the ability to not find love. You’re usually despised by Sonichus by being better impersonators.</string>
</resources>
