<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".blachu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/blachu_intro"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/blachu_intro"
                android:textColor="@color/colorString"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/blachu"
                android:layout_width="204dp"
                android:layout_height="211dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/blachu" />

            <TextView
                android:id="@+id/blachu_strength"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/blachu_strength"
                android:textColor="@color/colorString"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blachu_weakness"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/blachu_weakness"
                android:textColor="@color/colorString"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blachu_body"
                android:layout_width="393dp"
                android:layout_height="260dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/blachu_body"
                android:textColor="@color/colorString"
                android:textSize="18sp" />

            <Button
                android:id="@+id/homeBtn"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="HOME"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>