<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".rosechu">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rosechu_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/rosechu_intro"
                android:textColor="@color/colorString"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="204dp"
                android:layout_height="211dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/rosechu" />

            <TextView
                android:id="@+id/rosechu_strength"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/rosechu_strength"
                android:textColor="@color/colorString"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rosechu_weakness"
                android:layout_width="401dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/rosechu_weakness"
                android:textColor="@color/colorString"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rosechu_body"
                android:layout_width="400dp"
                android:layout_height="303dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/rosechu_body"
                android:textColor="@color/colorString"
                android:textSize="18sp" />

            <Button
                android:id="@+id/homeBtn"
                android:layout_width="83dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="HOME"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>